# hasselc

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  spec.l
src/: ast.rs  base_type.rs  code.rs  code_gen.rs  code_opt.rs  compiler.rs  error.rs  grammar.lalrpop  ir.rs  ir_gen.rs  lib.rs  llir.rs  llir_gen.rs  llir_opt.rs  main.rs  register.rs  src_tag.rs  src_unit.rs  symbol_table.rs  tokens.rs  type_expr.rs  types.rs
src/code/: block.rs  generator.rs  mod.rs  optimizer.rs  register.rs
src/ir/: block.rs  generator.rs  mod.rs  type_checker.rs
src/llir/: block.rs  builder.rs  common.rs  generator.rs  mod.rs  optimizer.rs
src/llir/binop/: add.rs  compare.rs  mod.rs
src/parse/: ast.rs  grammar.lalrpop  mod.rs
tests/: array_test.hsl  comparison_test.hsl  conditions_test.hsl  constants_test.hsl  emulation_tests.rs  memcpy_test.hsl  multiple_calls_test.hsl  no_op_test.hsl  recursion_test.hsl  simple_arg_test.hsl  simple_branch_test.hsl  string_test.hsl  test1.hsl  three_calls_test.hsl  two_calls_test.hsl  while_loop_test.hsl  word_test.hsl
vscode_extension/: language-configuration.json  package.json
vscode_extension/syntaxes/: hassel.tmLanguage.json
