[package]
name = "hasselc"
version = "0.1.0"
authors = ["John DiSanti <johndisanti@gmail.com>"]
build = "build.rs"
license = "MIT OR Apache-2.0"

[build-dependencies]
lalrpop = "0.13.1"

[dependencies]
clap = "2.27"
derive-new = "0.5"
derive_builder = "0.5"
error-chain = "0.11"
lalrpop-util = "0.13.1"
num-traits = "0.1"
regex = "0.2.1"

[dependencies.hassel_asm]
path = "../hassel_asm"

[dev-dependencies.hassel_emu]
path = "../hassel_emu"
